Adicionando pastas para componentes

--- a/rede-social/src/views/Home/Home.css
+++ b/rede-social/src/views/Home/Home.css
@@ -1,3 +1,9 @@
+/* soft reset */
 * {
-  background: red;
+  box-sizing: border-box;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  outline: none;
 }
