--- a/rede-social/src/components/Header/Header.css
+++ b/rede-social/src/components/Header/Header.css
@@ -1,34 +1,44 @@
 .Header {
-    align-items: center;
     background-color: #fff;
-    border: 2px solid blue;
+    border-bottom: solid 1px rgba(var(--b6a,219,219,219),1);
+    height: 54px;
+    width: 100vw;
+}
+
+.nav-header {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    height: 60px;
+    margin: 0 auto;
     padding: 10px 0;
+    max-width: 975px;
 }
 
 .logo-link {
-    height: 40px;
+    height: 36px;
 }
 
 .logo-instagram {
     display: block;
-    width: 120px;
+    width: 103px;
 }
 
 #search-profiles {
+    background-color: #fafafa;
     border: solid 1px rgba(var(--b6a,219,219,219),1);
     border-radius: 3px;
     color: #262626;
-    height: 30px;
+    height: 28px;
     padding: 3px 10px 3px 26px;
     /* text-align: center; */
     outline: 0;
 }
 
+#search-profiles::placeholder {
+    opacity: 1;
+}
+
 .icons {
-    border: 2px solid red;
     display: flex;
     font-size: 1.6em;
     justify-content: space-between;
@@ -40,6 +50,6 @@
 }
 
 .icons a:last-child {
-    color: #b9b5b5;
+    color: #dbdbdb;
 }
 
