--- a/rede-social/src/views/Home/Home.css
+++ b/rede-social/src/views/Home/Home.css
@@ -7,3 +7,13 @@
   text-decoration: none;
   outline: none;
 }
+
+.teste {
+  margin: 0 auto;
+  display: flex;
+  max-width: 975px;
+}
+
+.feed {
+  display: block;
+}
